# ml-systems

./: Makefile  README.md  main.py  pyproject.toml
csrc/: Makefile  softmax.c
csrc/linalg/: Makefile  matrix.c
notebooks/: cnns_and_resnets.ipynb  pyt.ipynb  pyt_mechanics.ipynb
notebooks/training-dynamics/: training_dynamics.ipynb
src/pyprobs/: matrix.py  prefix_sum.py  softmax.py
