# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Project metadata
[project]
name = "ml-systems-study"
version = "0.1.0"
description = "Implementation of my ML-Systems Curriculum"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flax>=0.12.6",
    "jax>=0.9.2",
    "jaxlib>=0.9.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "ruff>=0.15.8",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
