# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Project metadata
[project]
name = "ml-systems-study"
version = "0.1.0"
description = "Implementation of my ML-Systems Curriculum"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "einops>=0.8.2",
    "flax>=0.12.6",
    "jax>=0.9.2",
    "jaxlib>=0.9.2",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.1.1",
    "ruff>=0.15.8",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "jupyterlab>=4.5.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
